--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -13,6 +13,6 @@
       działania.
     </main>
     <footer><%- include('../partials/footer'); %></footer>
-    <script src="js/main.js"></script>
+    <%- include('../partials/scripts'); %>
   </body>
 </html>
