--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -7,6 +7,6 @@
     <header><%- include('../partials/header'); %></header>
     <main><%=user%>Welcome. Sadly empty for this moment :C</main>
     <footer><%- include('../partials/footer'); %></footer>
-    <script src="js/main.js"></script>
+    <%- include('../partials/scripts'); %>
   </body>
 </html>
