--- a/views/pages/serviceproviders.ejs
+++ b/views/pages/serviceproviders.ejs
@@ -7,6 +7,6 @@
     <header><%- include('../partials/header'); %></header>
     <main><%- include('../partials/serviceprovidersgrid'); %></main>
     <footer><%- include('../partials/footer'); %></footer>
-    <script src="js/main.js"></script>
+    <%- include('../partials/scripts'); %>
   </body>
 </html>
