--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -3,7 +3,7 @@
   <head>
     <%- include('../partials/head'); %>
   </head>
-  <body class="container">
+  <body>
     <header><%- include('../partials/header'); %></header>
     <main><%=user%>Welcome. Sadly empty for this moment :C</main>
     <footer><%- include('../partials/footer'); %></footer>
