--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -3,7 +3,7 @@
   <head>
     <%- include('../partials/head', {user: user}); %>
   </head>
-  <body class="container">
+  <body>
     <header><%- include('../partials/header'); %></header>
     <main><%- include('../partials/login-field'); %></main>
     <footer><%- include('../partials/footer'); %></footer>
