--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="css/main.css" />
 <link rel="stylesheet" href="css/userdashboard.css" />
 <link rel="stylesheet" href="css/serviceproviders.css" />
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="js/main.js"></script>
 <link
   href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
