some minor changes, trying to start working user update form

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -21,6 +21,14 @@
         >
       </li>
       <li>
+        <a
+          class="btn nav-link"
+          id="navregisterserviceprovider"
+          href="/registerserviceprovider"
+          >Rejestracja jako dostawca usług</a
+        >
+      </li>
+      <li>
         <a class="btn nav-link" id="navcalendar" href="/calendar">Kalendarz</a>
       </li>
       <%}%>
