--- a/views/partials/register-field.ejs
+++ b/views/partials/register-field.ejs
@@ -12,7 +12,7 @@
     <div class="input-group">
       <label for="password">Potwierdź hasło:</label>
       <input
-        type="password2"
+        type="password"
         id="password-register-confirm"
         name="password2"
         required
