--- a/views/pages/serviceproviderfull.ejs
+++ b/views/pages/serviceproviderfull.ejs
@@ -5,7 +5,10 @@
   </head>
   <body>
     <header><%- include('../partials/header'); %></header>
-    <main><%- include('../partials/main'); %></main>
+    <main>
+      <%- include('../partials/serviceproviderfullinfophoto'); %> <%-
+      include('../partials/serviceproviderfullinfo'); %>
+    </main>
     <footer><%- include('../partials/footer'); %></footer>
     <%- include('../partials/scripts'); %>
   </body>
