--- a/views/partials/serviceprovidersgrid.ejs
+++ b/views/partials/serviceprovidersgrid.ejs
@@ -12,7 +12,9 @@
           serviceproviderShortText("<%= provider.description %>");
         </script>
       </p>
-      <a href="#" class="btn btn-primary">Więcej...</a>
+      <a href="/serviceproviderfull/<%= provider._id %>" class="btn btn-primary"
+        >Więcej...</a
+      >
     </div>
   </div>
   <% }); %>
