--- a/views/partials/updateuser-field.ejs
+++ b/views/partials/updateuser-field.ejs
@@ -50,3 +50,4 @@
   </div>
   <button class="btn btn-primary" type="submit">Potwierdź</button>
 </form>
+<script src="js/userupdatealert.js"></script>
