--- a/views/partials/userdashboardgrid.ejs
+++ b/views/partials/userdashboardgrid.ejs
@@ -31,7 +31,7 @@
 </div>
 
 <div class="userdashboard">
-  <div class="userdash-item">Witaj! <%= user.username %></div>
+  <div class="userdash-item">Witaj!</div>
   <div class="userdash-break"></div>
   <div class="userdash-item"></div>
   <div class="userdash-item">
