--- a/views/partials/serviceproviderfullinfophoto.ejs
+++ b/views/partials/serviceproviderfullinfophoto.ejs
@@ -1,40 +1,93 @@
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li
-      data-target="#carouselExampleIndicators"
-      data-slide-to="0"
+<div id="carouselExampleIndicators" class="carousel slide">
+  <div class="carousel-indicators">
+    <button
+      type="button"
+      data-bs-target="#carouselExampleIndicators"
+      data-bs-slide-to="0"
       class="active"
-    ></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-  </ol>
+      aria-current="true"
+      aria-label="Slide 1"
+    ></button>
+    <button
+      type="button"
+      data-bs-target="#carouselExampleIndicators"
+      data-bs-slide-to="1"
+      aria-label="Slide 2"
+    ></button>
+    <button
+      type="button"
+      data-bs-target="#carouselExampleIndicators"
+      data-bs-slide-to="2"
+      aria-label="Slide 3"
+    ></button>
+  </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="..." alt="First slide" />
+      <img
+        src="<%=serviceprovider.photo %>"
+        class="d-block img-fluid"
+        alt="..."
+      />
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="..." alt="Second slide" />
+      <img
+        src="<%=serviceprovider.photo1 %>"
+        class="d-block img-fluid"
+        alt="..."
+      />
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="..." alt="Third slide" />
+      <img
+        src="<%=serviceprovider.photo2 %>"
+        class="d-block img-fluid"
+        alt="..."
+      />
+    </div>
+    <div class="carousel-item">
+      <img
+        src="<%=serviceprovider.photo3 %>"
+        class="d-block img-fluid"
+        alt="..."
+      />
+    </div>
+    <div class="carousel-item">
+      <img
+        src="<%=serviceprovider.photo4 %>"
+        class="d-block img-fluid"
+        alt="..."
+      />
+    </div>
+    <div class="carousel-item">
+      <img
+        src="<%=serviceprovider.photo5 %>"
+        class="d-block img-fluid"
+        alt="..."
+      />
+    </div>
+    <div class="carousel-item">
+      <img
+        src="<%=serviceprovider.photo6 %>"
+        class="d-block img-fluid"
+        alt="..."
+      />
     </div>
   </div>
-  <a
+  <button
     class="carousel-control-prev"
-    href="#carouselExampleIndicators"
-    role="button"
-    data-slide="prev"
+    type="button"
+    data-bs-target="#carouselExampleIndicators"
+    data-bs-slide="prev"
   >
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button
     class="carousel-control-next"
-    href="#carouselExampleIndicators"
-    role="button"
-    data-slide="next"
+    type="button"
+    data-bs-target="#carouselExampleIndicators"
+    data-bs-slide="next"
   >
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
+    <span class="visually-hidden">Next</span>
+  </button>
 </div>
