--- a/views/partials/serviceprovidersgrid.ejs
+++ b/views/partials/serviceprovidersgrid.ejs
@@ -1,4 +1,4 @@
-<div class="serviceprovidersgrid">
+<div class="serviceprovidersgrid row-gap-3">
   <% allServiceProviders.forEach(provider => { %>
   <div class="card" style="width: 18rem">
     <img src="<%=provider.photo%>" class="card-img-top" alt="..." />
