Added function for update of profile picture

--- a/views/pages/userdashboard.ejs
+++ b/views/pages/userdashboard.ejs
@@ -5,14 +5,7 @@
   </head>
   <body>
     <header><%- include('../partials/header'); %></header>
-    <main>
-      <div class="container mt-4">
-        <div id="alertBox" class="alert d-none" role="alert">
-          <!-- Tutaj zostanie umieszczony tekst alertu -->
-        </div>
-      </div>
-      <%- include('../partials/userdashboardgrid'); %>
-    </main>
+    <main><%- include('../partials/userdashboardgrid'); %></main>
     <footer><%- include('../partials/footer'); %></footer>
     <%- include('../partials/scripts'); %>
   </body>
