--- a/views/partials/userdashboardgrid.ejs
+++ b/views/partials/userdashboardgrid.ejs
@@ -5,17 +5,26 @@
         <div class="card-header">Profile Picture</div>
         <div class="card-body text-center">
           <!-- prettier-ignore -->
-          <img
-            class="img-account-profile rounded-circle mb-2"
+          <% if(!user.image) {%><img
+            class="img-account-profile img-thumbnail rounded-circle mb-2"
             alt="Brak zdjęcia profilowego"
-            src=<%= user.image %>
+            src="https://i.imgur.com/tGh9Ii7.png"
           />
+          <%} else {%>
+          <!-- prettier-ignore -->
+          <img class="img-account-profile img-thumbnail rounded-circle mb-2" alt="Brak zdjęcia profilowego" src="<%= user.image%>"
+          />
+          <%}%>
           <div class="small font-italic text-muted mb-4">
-            JPG or PNG no larger than 5 MB
+            Link bezpośredni do zdjęcia
           </div>
-          <button class="btn btn-primary" type="button">
-            Upload new image
-          </button>
+          <form action="/uploadprofilepicture/<%= user._id%>" method="POST">
+            <input class="form-control" id="image" name="image" type="text" />
+
+            <button class="btn btn-primary mt-2" type="submit">
+              Zaktualizuj zdjęcie
+            </button>
+          </form>
         </div>
       </div>
     </div>
@@ -28,15 +37,4 @@
       </div>
     </div>
   </div>
-</div>
-
-<div class="userdashboard">
-  <div class="userdash-item">Witaj!</div>
-  <div class="userdash-break"></div>
-  <div class="userdash-item"></div>
-  <div class="userdash-item">
-    <a href="/registerserviceprovider">Zarejestruj się jako usługodawca</a>
-  </div>
-  <div class="userdash-item"></div>
-  <div class="userdash-item">Zmień hasło</div>
 </div>
