Added 4 last serviceproviders on main page

--- a/views/partials/main.ejs
+++ b/views/partials/main.ejs
@@ -12,46 +12,7 @@
 </div>
 
 <div class="container-fluid bg-3 text-center">
-  <h3>Ostatnie zarejstrowane firmy</h3>
-  <br />
-  <div class="row">
-    <div class="col-sm-3">
-      <p>Some text..</p>
-      <img
-        src="https://placehold.it/150x80?text=IMAGE"
-        class="img-responsive"
-        style="width: 100%"
-        alt="Image"
-      />
-    </div>
-    <div class="col-sm-3">
-      <p>Some text..</p>
-      <img
-        src="https://placehold.it/150x80?text=IMAGE"
-        class="img-responsive"
-        style="width: 100%"
-        alt="Image"
-      />
-    </div>
-    <div class="col-sm-3">
-      <p>Some text..</p>
-      <img
-        src="https://placehold.it/150x80?text=IMAGE"
-        class="img-responsive"
-        style="width: 100%"
-        alt="Image"
-      />
-    </div>
-    <div class="col-sm-3">
-      <p>Some text..</p>
-      <img
-        src="https://placehold.it/150x80?text=IMAGE"
-        class="img-responsive"
-        style="width: 100%"
-        alt="Image"
-      />
-    </div>
-  </div>
+  <%- include('../partials/showlast4'); %>
 </div>
 <br />
 </div>
