Added review system

--- a/views/partials/register-serviceprovider-field.ejs
+++ b/views/partials/register-serviceprovider-field.ejs
@@ -43,7 +43,7 @@
       id="category3"
       name="category3"
       value="1"
-    /><label for="category3" class="form-check-label">Zespół</label>
+    /><label for="category3" class="form-check-label">Muzykanci</label>
   </div>
   <div class="mb-3">
     <label for="photo"
