--- a/views/partials/showlast4.ejs
+++ b/views/partials/showlast4.ejs
@@ -4,7 +4,7 @@
   <% allServiceProviders.slice(-4).reverse().forEach(provider => { %>
 
   <div class="col-sm-3">
-    <p><%= provider.globalname %></p>
+    <h5><%= provider.globalname %></h5>
     <img
       src="<%=provider.photo%>"
       class="img-responsive"
