Updated readme file

--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -12,7 +12,9 @@
           <p>
             Imprezomat powstał z myślą zrzeszenia usługodawców w przypadku
             imprez okolicznościowych, skąd pomysł na temat? Szczerze? To nie
-            wiem przyszedł do głowy i się tak przyjął.
+            wiem przyszedł do głowy i się tak przyjął, jako temat pracy
+            inżynierskiej pt "Aplikacja internetowa służąca do organizacji
+            imprez okolicznościowych".
           </p>
         </div>
         <p>
