--- a/views/partials/serviceprovidersgrid.ejs
+++ b/views/partials/serviceprovidersgrid.ejs
@@ -1,5 +1,5 @@
 <div class="serviceprovidersgrid row-gap-3">
-  <% allServiceProviders.forEach(provider => { %>
+  <% allServiceProviders.reverse().forEach(provider => { %>
   <div class="card" style="width: 18rem">
     <img src="<%=provider.photo%>" class="card-img-top" alt="..." />
     <div class="card-img-overlay" style="height: 20px">
